[gd_scene load_steps=5 format=3 uid="uid://bt7x31hbxwu7a"]

[ext_resource type="PackedScene" uid="uid://wq8eaeo5eftd" path="res://feature/ui_content_container/content_container.tscn" id="1_rj51l"]
[ext_resource type="PackedScene" uid="uid://27va2jwjyxqm" path="res://feature/inventory/inventory.tscn" id="2_0d8je"]
[ext_resource type="Script" path="res://feature/!world/ui_sreens/cm_inventory.gd" id="2_ev6c3"]
[ext_resource type="PackedScene" uid="uid://b44rlr8ay6jxr" path="res://feature/items/item_information.tscn" id="3_8kdle"]

[node name="CM Inventory" instance=ExtResource("1_rj51l")]
script = ExtResource("2_ev6c3")
transfer_inventory = NodePath("")

[node name="InventoryDisplay" parent="MarginContainer/HBoxContainer/MainContainer" index="0" instance=ExtResource("2_0d8je")]
layout_mode = 2

[node name="SubContainer" parent="MarginContainer/HBoxContainer" index="1"]
current_tab = 0

[node name="EqupmentPanel" type="MarginContainer" parent="MarginContainer/HBoxContainer/SubContainer" index="1"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ItemInformationPanel" parent="MarginContainer/HBoxContainer/SubContainer" index="2" instance=ExtResource("3_8kdle")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="duble_pressed" from="MarginContainer/HBoxContainer/MainContainer/InventoryDisplay" to="." method="_on_inventory_display_duble_pressed"]
[connection signal="item_pressed" from="MarginContainer/HBoxContainer/MainContainer/InventoryDisplay" to="MarginContainer/HBoxContainer/SubContainer/ItemInformationPanel" method="update"]
